# app/api/router.py
@@ -6,5 +6,5 @@ api_router = APIRouter()
 api_router.include_router(auth.router, prefix="/auth", tags=["auth"])
 api_router.include_router(projects.router, prefix="/projects", tags=["projects"])
 api_router.include_router(model_configs.router, tags=["model_configs"])
-api_router.include_router(datasets.router, prefix="/datasets", tags=["datasets"])
+api_router.include_router(datasets.router, tags=["datasets"])
 api_router.include_router(eval_tasks.router, prefix="/eval-tasks", tags=["eval_tasks"])
